--- a/template/ios/NewRN/Info.plist
+++ b/template/ios/NewRN/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CodePushDeploymentKey</key>
+	<string>bZJXR9IS3ST0tSOSybp6JbzDWcZRcOlqT-stu</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
