--- a/template/package.json
+++ b/template/package.json
@@ -10,12 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-code-push": "^7.0.5",
+    "react-native-config": "^1.4.11",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-version-check": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
